<resources>
    <string name="app_name">TwitterClone</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="no_account">Don`t have account? Go to Signup</string>
    <string name="go_to_login">Already have account? Go to Login</string>
    <string name="hint_username">Username</string>
    <string name="btn_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_apply">Apply</string>
    <string name="tweet_hint">Share something</string>
</resources>