<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_3x"
            android:layout_marginBottom="@dimen/grid_3x"
            android:layout_marginStart="@dimen/grid_1x"
            android:layout_marginEnd="@dimen/grid_1x"
            android:gravity="center_horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/default_user"
                android:layout_marginBottom="@dimen/grid_2x"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_photo">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textCapWords"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="300dp"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/standard_button_rounded"
                android:text="@string/btn_apply"
                android:layout_below="@+id/til_email"
                android:layout_marginTop="@dimen/grid_2x"/>

            <Button
                android:id="@+id/btn_signout"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:text="Sign out"
                android:layout_marginTop="40dp"
                android:background="@drawable/standard_button_rounded"
                android:layout_below="@+id/btn_apply"
                />


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparentGrey"
        android:gravity="center"
        android:elevation="5dp"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>